# nestix-native-winui

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
examples/basic-winui/: Cargo.toml
examples/basic-winui/src/: main.rs
examples/context-menu/: Cargo.toml
examples/context-menu/src/: main.rs
examples/drag-drop/: Cargo.toml
examples/drag-drop/src/: main.rs
examples/file-picker/: Cargo.toml
examples/file-picker/src/: main.rs
examples/form-controls/: Cargo.toml
examples/form-controls/src/: main.rs
examples/menu-bar/: Cargo.toml
examples/menu-bar/src/: main.rs
examples/tabs/: Cargo.toml
examples/tabs/src/: main.rs
scripts/: fetch-windows-app-sdk.ps1
src/: app_shim.rs  button.rs  checkbox.rs  contexts.rs  drag_drop.rs  file_picker.rs  flex_view.rs  image_view.rs  input.rs  lib.rs  menu.rs  native_control.rs  radio_button.rs  root.rs  scroll_view.rs  select.rs  slider.rs  switch.rs  tab_view.rs  text.rs  window.rs  window_native.rs  xaml.rs  xaml_app.rs  xaml_events.rs
