[package]
name = "nestix-native-winui"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["examples/*"]

[dependencies]
nestix = { git = "https://github.com/wirelesseye/nestix.git" }
nestix-native-core = { git = "https://github.com/wirelesseye/nestix-native.git", features = ["taffy"] }
taffy = "0.9.2"
windows = { git = "https://github.com/microsoft/windows-rs.git", rev = "c166957", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_HiDpi",
] }
windows-collections = { git = "https://github.com/microsoft/windows-rs.git", rev = "c166957" }
windows-core = { git = "https://github.com/microsoft/windows-rs.git", rev = "c166957" }
windows-future = { git = "https://github.com/microsoft/windows-rs.git", rev = "c166957" }
windows-numerics = { git = "https://github.com/microsoft/windows-rs.git", rev = "c166957" }
windows-reference = { git = "https://github.com/microsoft/windows-rs.git", rev = "c166957" }
windows-time = { git = "https://github.com/microsoft/windows-rs.git", rev = "c166957" }

[build-dependencies]
windows-bindgen = { git = "https://github.com/microsoft/windows-rs.git", rev = "c166957" }
