[package]
name = "tabs-example"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = { version = "0.11.8" }
nanoid = "0.4.0"
nestix = { git = "https://github.com/wirelesseye/nestix.git" }
nestix-native = { git = "https://github.com/wirelesseye/nestix-native.git", default-features = false }
nestix-native-winui = { path = "../.." }
rand = "0.9"
